--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,20 @@
 <resources>
     <string name="app_name">Ching</string>
+
+    <!-- 登录界面 -->
     <string name="login_username_hint">输入你的手机号哦</string>
     <string name="login_password_hint">输入你的密码哦</string>
     <string name="register_captcha_Button">发送验证码</string>
     <string name="register_login_Text">登录</string>
-    <string name="title_activity_login1">Sign in</string>
+    <string name="login_register_Text">立即注册</string>
+    <string name="login_forgot_Text">忘记密码</string>
 
     <!-- 主界面的下方radiobutton的文字 -->
     <string name="home_rb">首页</string>
     <string name="features_rb">功能</string>
     <string name="dynamic_rb">动态</string>
     <string name="me_rb">我</string>
+
+    <!-- 个人中心 -->
+    <string name="me_logout_text">未登录</string>
 </resources>
