--- a/baselibrary/src/main/res/values/strings.xml
+++ b/baselibrary/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">baselibrary</string>
+
+    <string name="url">http://10.1.180.145:8080</string>
+    <!--<string name="url">http://192.168.43.85:8080</string>-->
 </resources>
