--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">Ching</string>
 
-    <!-- 登录界面 -->
+    <!-- 登录注册界面 -->
     <string name="login_username_hint">输入你的手机号哦</string>
     <string name="login_password_hint">输入你的密码哦</string>
-    <string name="register_captcha_Button">发送验证码</string>
+    <string name="register_captcha_Button">获取验证码</string>
+    <string name="register_captcha_Text">验证码</string>
     <string name="register_login_Text">登录</string>
     <string name="login_register_Text">立即注册</string>
     <string name="login_forgot_Text">忘记密码</string>
